--- a/Analyses v1 Markdown.Rmd
+++ b/Analyses v1 Markdown.Rmd
@@ -49,6 +49,7 @@ gps <- rename(gps,lat = latitude) %>% `colnames<-`(c("ID2","lat","long")) %>% mu
 write.csv(gps,file="./data/gps.csv")
 ```
 
+## 30 Normals 
 
 ### Import dataset with 30yr normals data
 
@@ -57,6 +58,7 @@ write.csv(gps,file="./data/gps.csv")
 normals <- read.csv("./data/gps_Normal_1991_2020MSY.csv")
 normals <- rename(normals, id = ID2)
 ```
+
 
 ### Merge data
 
@@ -109,25 +111,27 @@ filtered.symptoms <- combined  %>% filter(field.tree.canopy.symptoms=="Healthy"|
 levels(filtered.symptoms$field.tree.canopy.symptoms)
 ```
 
-## Data Exploration
+### Data Exploration
 
-### MAT
 
-#### Symptoms
+
+#### MAT
+
+##### Symptoms
 
 ```{r}
 ggplot(filtered.symptoms,aes(field.tree.canopy.symptoms,MAT,fill=field.tree.canopy.symptoms))+geom_boxplot(show.legend=FALSE)+coord_flip()+theme_bw() +labs(title="30 Year Normals",x="Symptoms")
 ```
 
-#### Site Severity
+##### Site Severity
 
-```{r}
+```{r include=FALSE}
 ggplot(filtered.symptoms,aes(field.number.of.additional.unhealthy.trees..of.same.species..in.area..within.sight.,MAT,fill=field.tree.canopy.symptoms))+geom_boxplot()+coord_flip()+theme_bw() +labs(fill="Unhealthy Trees")+labs(title="30 Year Normals",x="Symptoms")
 ```
 
-#### Size Class
+##### Size Class
 
-```{r}
+```{r include=FALSE}
 ggplot(filtered.symptoms,aes(field.optional...tree.size,MAT,fill=field.tree.canopy.symptoms))+geom_boxplot(show.legend=FALSE)+coord_flip()+theme_bw() +labs(fill="Unhealthy Trees")+labs(title="30 Year Normals",x="Symptoms")
 ```
 
@@ -145,26 +149,16 @@ ggplot(filtered.symptoms,aes(field.tree.canopy.symptoms,MAT,fill=field.tree.cano
 
 
 
-### MAP
+#### MAP
 
-#### Symptoms
+##### Symptoms
 
 ```{r}
 ggplot(filtered.symptoms,aes(field.tree.canopy.symptoms,MAP,fill=field.tree.canopy.symptoms))+geom_boxplot(show.legend=FALSE)+coord_flip()+theme_bw() +labs(title="30 Year Normals",x="Symptoms")
 ```
 
 
-#### Site Severity
 
-```{r }
-ggplot(filtered.symptoms,aes(field.number.of.additional.unhealthy.trees..of.same.species..in.area..within.sight.,MAP,fill=field.tree.canopy.symptoms))+geom_boxplot()+coord_flip()+theme_bw() +labs(fill="Unhealthy Trees") +labs(title="30 Year Normals",x="Symptoms")
-```
-
-#### Size Class
-
-```{r}
-ggplot(filtered.symptoms,aes(field.optional...tree.size,MAP,fill=field.tree.canopy.symptoms))+geom_boxplot(show.legend=FALSE)+coord_flip()+theme_bw() +labs(fill="Unhealthy Trees")+labs(title="30 Year Normals",x="Symptoms")
-```
 
 
 ```{r include=FALSE}
@@ -175,26 +169,16 @@ ggplot(filtered.symptoms,aes(field.tree.canopy.symptoms,MAP,fill=field.tree.cano
 ggplot(filtered.symptoms,aes(field.tree.canopy.symptoms,MAP,fill=field.tree.canopy.symptoms))+geom_boxplot(show.legend=FALSE)+coord_flip()+theme_bw() +facet_wrap(~field.optional...tree.size) +labs(title="30 Year Normals",x="Symptoms")
 ```
 
-### AHM
+#### AHM
 
-#### Symptoms
+##### Symptoms
 
 ```{r}
 ggplot(filtered.symptoms,aes(field.tree.canopy.symptoms,AHM,fill=field.tree.canopy.symptoms))+geom_boxplot(show.legend=FALSE)+coord_flip()+theme_bw() +labs(title="30 Year Normals",x="Symptoms")
 ```
 
 
-#### Site Severity
 
-```{r }
-ggplot(filtered.symptoms,aes(field.number.of.additional.unhealthy.trees..of.same.species..in.area..within.sight.,AHM,fill=field.tree.canopy.symptoms))+geom_boxplot()+coord_flip()+theme_bw() +labs(fill="Unhealthy Trees") +labs(title="30 Year Normals",x="Symptoms")
-```
-
-#### Size Class
-
-```{r}
-ggplot(filtered.symptoms,aes(field.optional...tree.size,AHM,fill=field.tree.canopy.symptoms))+geom_boxplot(show.legend=FALSE)+coord_flip()+theme_bw() +labs(fill="Unhealthy Trees")+labs(title="30 Year Normals",x="Symptoms")
-```
 
 
 ```{r include=FALSE}
@@ -205,32 +189,490 @@ ggplot(filtered.symptoms,aes(field.tree.canopy.symptoms,AHM,fill=field.tree.cano
 ggplot(filtered.symptoms,aes(field.tree.canopy.symptoms,AHM,fill=field.tree.canopy.symptoms))+geom_boxplot(show.legend=FALSE)+coord_flip()+theme_bw() +facet_wrap(~field.optional...tree.size) +labs(title="30 Year Normals",x="Symptoms")
 ```
 
-### SHM
+#### SHM
 
-#### Symptoms
+##### Symptoms
 
 ```{r}
 ggplot(filtered.symptoms,aes(field.tree.canopy.symptoms,SHM,fill=field.tree.canopy.symptoms))+geom_boxplot(show.legend=FALSE)+coord_flip()+theme_bw() +labs(title="30 Year Normals",x="Symptoms")
 ```
 
-
-#### Site Severity
-
-```{r }
-ggplot(filtered.symptoms,aes(field.number.of.additional.unhealthy.trees..of.same.species..in.area..within.sight.,SHM,fill=field.tree.canopy.symptoms))+geom_boxplot()+coord_flip()+theme_bw() +labs(fill="Unhealthy Trees") +labs(title="30 Year Normals",x="Symptoms")
+###### Filtered SHM <200
+```{r}
+filtered.symptoms.shm <- filtered.symptoms %>% filter(SHM<200) %>% droplevels()
 ```
-
-#### Size Class
 
 ```{r}
-ggplot(filtered.symptoms,aes(field.optional...tree.size,SHM,fill=field.tree.canopy.symptoms))+geom_boxplot(show.legend=FALSE)+coord_flip()+theme_bw() +labs(fill="Unhealthy Trees")+labs(title="30 Year Normals",x="Symptoms")
+ggplot(filtered.symptoms.shm,aes(field.tree.canopy.symptoms,SHM,fill=field.tree.canopy.symptoms))+geom_boxplot(show.legend=FALSE)+coord_flip()+theme_bw() +labs(title="30 Year Normals",x="Symptoms", y="Summer Heat-Moisture Index")
 ```
-
-
 ```{r include=FALSE}
 ggplot(filtered.symptoms,aes(field.tree.canopy.symptoms,SHM,fill=field.tree.canopy.symptoms))+geom_boxplot(show.legend=FALSE)+coord_flip()+facet_wrap(~field.number.of.additional.unhealthy.trees..of.same.species..in.area..within.sight.)+theme_bw() +labs(title="30 Year Normals",x="Symptoms")
 ```
 
 ```{r include=FALSE}
 ggplot(filtered.symptoms,aes(field.tree.canopy.symptoms,SHM,fill=field.tree.canopy.symptoms))+geom_boxplot(show.legend=FALSE)+coord_flip()+theme_bw() +facet_wrap(~field.optional...tree.size) +labs(title="30 Year Normals",x="Symptoms")
+```
+
+
+#### MSP
+
+##### Symptoms
+
+```{r}
+ggplot(filtered.symptoms,aes(field.tree.canopy.symptoms,MSP,fill=field.tree.canopy.symptoms))+geom_boxplot(show.legend=FALSE)+coord_flip()+theme_bw() +labs(title="30 Year Normals",x="Symptoms")
+```
+
+```{r}
+ggplot(filtered.symptoms.shm,aes(field.tree.canopy.symptoms,MSP,fill=field.tree.canopy.symptoms))+geom_boxplot(show.legend=FALSE)+coord_flip()+theme_bw() +labs(title="30 Year Normals",x="Symptoms", y="Summer Heat-Moisture Index")
+```
+
+#### CMD
+
+##### Symptoms
+
+```{r}
+ggplot(filtered.symptoms,aes(field.tree.canopy.symptoms,CMD,fill=field.tree.canopy.symptoms))+geom_boxplot(show.legend=FALSE)+coord_flip()+theme_bw() +labs(title="30 Year Normals",x="Symptoms")
+```
+
+```{r}
+ggplot(filtered.symptoms.shm,aes(field.tree.canopy.symptoms,CMD,fill=field.tree.canopy.symptoms))+geom_boxplot(show.legend=FALSE)+coord_flip()+theme_bw() +labs(title="30 Year Normals",x="Symptoms", y="Summer Heat-Moisture Index")
+```
+
+
+#### Eref
+
+##### Symptoms
+
+```{r}
+ggplot(filtered.symptoms,aes(field.tree.canopy.symptoms,Eref,fill=field.tree.canopy.symptoms))+geom_boxplot(show.legend=FALSE)+coord_flip()+theme_bw() +labs(title="30 Year Normals",x="Symptoms")
+```
+
+```{r}
+ggplot(filtered.symptoms.shm,aes(field.tree.canopy.symptoms,Eref,fill=field.tree.canopy.symptoms))+geom_boxplot(show.legend=FALSE)+coord_flip()+theme_bw() +labs(title="30 Year Normals",x="Symptoms", y="Summer Heat-Moisture Index")
+```
+
+## Decade 2011-2020
+
+### Import dataset with Decade 2011-2020
+
+
+```{r}
+lastdecade <- read.csv("./data/gps_Decade_2011_2020MSY.csv")
+lastdecade <- rename(lastdecade, id = ID2)
+```
+
+### Merge data
+
+```{r}
+combined <- left_join(data,lastdecade,by="id")  %>% filter(MAP >0,na.rm=TRUE)
+```
+
+### Clean data 
+
+#### Add consistency to factors
+##### Symptoms 
+```{r}
+combined$field.tree.canopy.symptoms[combined$field.tree.canopy.symptoms=="Multiple Symptoms"] <-"Multiple Symptoms (please list in Notes)"
+combined$field.tree.canopy.symptoms[combined$field.tree.canopy.symptoms=="multiple symptoms"] <-"Multiple Symptoms (please list in Notes)"
+combined$field.tree.canopy.symptoms[combined$field.tree.canopy.symptoms=="thinning foliage"] <-"Thinning Canopy"
+combined$field.tree.canopy.symptoms[combined$field.tree.canopy.symptoms=="healthy"] <-"Healthy"
+combined$field.tree.canopy.symptoms[combined$field.tree.canopy.symptoms=="dead top"] <-"Old Dead Top (needles already gone)"
+combined <- combined %>% droplevels()
+combined$field.tree.canopy.symptoms <- as.factor(combined$field.tree.canopy.symptoms)
+levels(combined$field.tree.canopy.symptoms)
+```
+
+##### Unhealthy trees
+```{r}
+combined$field.number.of.additional.unhealthy.trees..of.same.species..in.area..within.sight.[combined$field.number.of.additional.unhealthy.trees..of.same.species..in.area..within.sight.=="4"] <- "4-6"
+combined$field.number.of.additional.unhealthy.trees..of.same.species..in.area..within.sight.[combined$field.number.of.additional.unhealthy.trees..of.same.species..in.area..within.sight.=="5"] <- "4-6"
+combined$field.number.of.additional.unhealthy.trees..of.same.species..in.area..within.sight.[combined$field.number.of.additional.unhealthy.trees..of.same.species..in.area..within.sight.=="2"] <- "2-3"
+combined <- combined %>% droplevels()
+combined$field.number.of.additional.unhealthy.trees..of.same.species..in.area..within.sight. <- as.factor(combined$field.number.of.additional.unhealthy.trees..of.same.species..in.area..within.sight.)
+levels(combined$field.number.of.additional.unhealthy.trees..of.same.species..in.area..within.sight.)
+```
+
+##### Tree size
+```{r}
+combined$field.optional...tree.size[combined$field.optional...tree.size == "Large"] <- "Large (too big to wrap arms around trunk)"
+combined$field.optional...tree.size[combined$field.optional...tree.size == "Medium"] <- "Medium (can wrap arms around trunk)"
+combined$field.optional...tree.size[combined$field.optional...tree.size == "Small"] <- "Small (can wrap hands around trunk)"
+combined$field.optional...tree.size[combined$field.optional...tree.size == "Very Large"] <- "Very Large (would take many people to wrap arms around trunk)"
+combined <- combined %>% droplevels()
+combined$field.optional...tree.size <- as.factor(combined$field.optional...tree.size)
+levels(combined$field.optional...tree.size)
+```
+
+
+### Filter data
+
+#### Only include symptoms of interest
+```{r}
+filtered.symptoms <- combined  %>% filter(field.tree.canopy.symptoms=="Healthy"|field.tree.canopy.symptoms=="Thinning Canopy"|field.tree.canopy.symptoms=="New Dead Top (red or brown needles still attached)"|field.tree.canopy.symptoms=="Old Dead Top (needles already gone)"|field.tree.canopy.symptoms=="Tree is dead") %>% droplevels()
+levels(filtered.symptoms$field.tree.canopy.symptoms)
+```
+
+### Data Exploration
+
+#### MAT
+
+##### Symptoms
+
+```{r}
+ggplot(filtered.symptoms,aes(field.tree.canopy.symptoms,MAT,fill=field.tree.canopy.symptoms))+geom_boxplot(show.legend=FALSE)+coord_flip()+theme_bw() +labs(title="Decade 2011-2020",x="Symptoms")
+```
+
+##### Site Severity
+
+```{r include=FALSE}
+ggplot(filtered.symptoms,aes(field.number.of.additional.unhealthy.trees..of.same.species..in.area..within.sight.,MAT,fill=field.tree.canopy.symptoms))+geom_boxplot()+coord_flip()+theme_bw() +labs(fill="Unhealthy Trees")+labs(title="Decade 2011-2020",x="Symptoms")
+```
+
+##### Size Class
+
+```{r include=FALSE}
+ggplot(filtered.symptoms,aes(field.optional...tree.size,MAT,fill=field.tree.canopy.symptoms))+geom_boxplot(show.legend=FALSE)+coord_flip()+theme_bw() +labs(fill="Unhealthy Trees")+labs(title="Decade 2011-2020",x="Symptoms")
+```
+
+```{r include=FALSE}
+ggplot(filtered.symptoms,aes(field.tree.canopy.symptoms,MAT,fill=field.tree.canopy.symptoms))+geom_boxplot(show.legend=FALSE)+coord_flip()+facet_wrap(~field.number.of.additional.unhealthy.trees..of.same.species..in.area..within.sight.)+theme_bw() +labs(title="Decade 2011-2020",x="Symptoms")
+```
+
+```{r include=FALSE}
+ggplot(filtered.symptoms,aes(field.tree.canopy.symptoms,MAT,fill=field.tree.canopy.symptoms))+geom_boxplot(show.legend=FALSE)+coord_flip()+theme_bw() +facet_wrap(~field.optional...tree.size) +labs(title="Decade 2011-2020",x="Symptoms")
+```
+
+#### MAP
+
+##### Symptoms
+
+```{r}
+ggplot(filtered.symptoms,aes(field.tree.canopy.symptoms,MAP,fill=field.tree.canopy.symptoms))+geom_boxplot(show.legend=FALSE)+coord_flip()+theme_bw() +labs(title="Decade 2011-2020",x="Symptoms")
+```
+
+#### AHM
+
+##### Symptoms
+
+```{r}
+ggplot(filtered.symptoms,aes(field.tree.canopy.symptoms,AHM,fill=field.tree.canopy.symptoms))+geom_boxplot(show.legend=FALSE)+coord_flip()+theme_bw() +labs(title="Decade 2011-2020",x="Symptoms")
+```
+
+#### SHM
+
+##### Symptoms
+
+```{r}
+ggplot(filtered.symptoms,aes(field.tree.canopy.symptoms,SHM,fill=field.tree.canopy.symptoms))+geom_boxplot(show.legend=FALSE)+coord_flip()+theme_bw() +labs(title="Decade 2011-2020",x="Symptoms")
+```
+
+###### Filtered SHM <200
+```{r}
+filtered.symptoms.shm <- filtered.symptoms %>% filter(SHM<200) %>% droplevels()
+```
+
+```{r}
+ggplot(filtered.symptoms.shm,aes(field.tree.canopy.symptoms,SHM,fill=field.tree.canopy.symptoms))+geom_boxplot(show.legend=FALSE)+coord_flip()+theme_bw() +labs(title="Decade 2011-2020",x="Symptoms", y="Summer Heat-Moisture Index")
+```
+
+#### MSP
+
+##### Symptoms
+
+```{r}
+ggplot(filtered.symptoms,aes(field.tree.canopy.symptoms,MSP,fill=field.tree.canopy.symptoms))+geom_boxplot(show.legend=FALSE)+coord_flip()+theme_bw() +labs(title="Decade 2011-2020",x="Symptoms")
+```
+
+```{r}
+ggplot(filtered.symptoms.shm,aes(field.tree.canopy.symptoms,MSP,fill=field.tree.canopy.symptoms))+geom_boxplot(show.legend=FALSE)+coord_flip()+theme_bw() +labs(title="Decade 2011-2020",x="Symptoms", y="Summer Heat-Moisture Index")
+```
+
+#### CMD
+
+##### Symptoms
+
+```{r}
+ggplot(filtered.symptoms,aes(field.tree.canopy.symptoms,CMD,fill=field.tree.canopy.symptoms))+geom_boxplot(show.legend=FALSE)+coord_flip()+theme_bw() +labs(title="Decade 2011-2020",x="Symptoms")
+```
+
+```{r}
+ggplot(filtered.symptoms.shm,aes(field.tree.canopy.symptoms,CMD,fill=field.tree.canopy.symptoms))+geom_boxplot(show.legend=FALSE)+coord_flip()+theme_bw() +labs(title="Decade 2011-2020",x="Symptoms", y="Summer Heat-Moisture Index")
+```
+
+#### Eref
+
+##### Symptoms
+
+```{r}
+ggplot(filtered.symptoms,aes(field.tree.canopy.symptoms,Eref,fill=field.tree.canopy.symptoms))+geom_boxplot(show.legend=FALSE)+coord_flip()+theme_bw() +labs(title="Decade 2011-2020",x="Symptoms")
+```
+
+```{r}
+ggplot(filtered.symptoms.shm,aes(field.tree.canopy.symptoms,Eref,fill=field.tree.canopy.symptoms))+geom_boxplot(show.legend=FALSE)+coord_flip()+theme_bw() +labs(title="Decade 2011-2020",x="Symptoms", y="Summer Heat-Moisture Index")
+```
+
+### Large Trees on Severe sites
+
+```{r}
+largesevere <- filtered.symptoms %>% filter(field.optional...tree.size=="Large (too big to wrap arms around trunk)" & field.number.of.additional.unhealthy.trees..of.same.species..in.area..within.sight.=="More than 10" | field.number.of.additional.unhealthy.trees..of.same.species..in.area..within.sight.=="7-10") %>% droplevels()
+```
+
+#### MSP
+
+##### Symptoms
+
+```{r}
+ggplot(largesevere,aes(field.tree.canopy.symptoms,MSP,fill=field.tree.canopy.symptoms))+geom_boxplot(show.legend=FALSE)+coord_flip()+theme_bw() +labs(title="Decade 2011-2020",x="Symptoms")
+```
+
+#### CMD
+
+##### Symptoms
+
+```{r}
+ggplot(largesevere,aes(field.tree.canopy.symptoms,CMD,fill=field.tree.canopy.symptoms))+geom_boxplot(show.legend=FALSE)+coord_flip()+theme_bw() +labs(title="Decade 2011-2020",x="Symptoms")
+```
+
+## TOPO Data
+
+
+### Import TOPO Data
+
+```{r}
+topo <- read.csv("./data/gps plus DEM and TOPO data.csv")
+topo <- rename(topo, id = ID2)
+```
+
+
+### Merge data
+
+```{r}
+combined2 <- left_join(combined,topo,by="id")
+```
+
+### Clean data 
+
+#### Add consistency to factors
+##### Symptoms 
+```{r}
+combined2$field.tree.canopy.symptoms[combined2$field.tree.canopy.symptoms=="Multiple Symptoms"] <-"Multiple Symptoms (please list in Notes)"
+combined2$field.tree.canopy.symptoms[combined2$field.tree.canopy.symptoms=="multiple symptoms"] <-"Multiple Symptoms (please list in Notes)"
+combined2$field.tree.canopy.symptoms[combined2$field.tree.canopy.symptoms=="thinning foliage"] <-"Thinning Canopy"
+combined2$field.tree.canopy.symptoms[combined2$field.tree.canopy.symptoms=="healthy"] <-"Healthy"
+combined2$field.tree.canopy.symptoms[combined2$field.tree.canopy.symptoms=="dead top"] <-"Old Dead Top (needles already gone)"
+combined2 <- combined2 %>% droplevels()
+combined2$field.tree.canopy.symptoms <- as.factor(combined2$field.tree.canopy.symptoms)
+levels(combined2$field.tree.canopy.symptoms)
+```
+
+##### Unhealthy trees
+```{r}
+combined2$field.number.of.additional.unhealthy.trees..of.same.species..in.area..within.sight.[combined2$field.number.of.additional.unhealthy.trees..of.same.species..in.area..within.sight.=="4"] <- "4-6"
+combined2$field.number.of.additional.unhealthy.trees..of.same.species..in.area..within.sight.[combined2$field.number.of.additional.unhealthy.trees..of.same.species..in.area..within.sight.=="5"] <- "4-6"
+combined2$field.number.of.additional.unhealthy.trees..of.same.species..in.area..within.sight.[combined2$field.number.of.additional.unhealthy.trees..of.same.species..in.area..within.sight.=="2"] <- "2-3"
+combined2 <- combined2 %>% droplevels()
+combined2$field.number.of.additional.unhealthy.trees..of.same.species..in.area..within.sight. <- as.factor(combined2$field.number.of.additional.unhealthy.trees..of.same.species..in.area..within.sight.)
+levels(combined2$field.number.of.additional.unhealthy.trees..of.same.species..in.area..within.sight.)
+```
+
+##### Tree size
+```{r}
+combined2$field.optional...tree.size[combined2$field.optional...tree.size == "Large"] <- "Large (too big to wrap arms around trunk)"
+combined2$field.optional...tree.size[combined2$field.optional...tree.size == "Medium"] <- "Medium (can wrap arms around trunk)"
+combined2$field.optional...tree.size[combined2$field.optional...tree.size == "Small"] <- "Small (can wrap hands around trunk)"
+combined2$field.optional...tree.size[combined2$field.optional...tree.size == "Very Large"] <- "Very Large (would take many people to wrap arms around trunk)"
+combined2 <- combined2 %>% droplevels()
+combined2$field.optional...tree.size <- as.factor(combined2$field.optional...tree.size)
+levels(combined2$field.optional...tree.size)
+```
+
+
+### Filter data
+
+#### Only include symptoms of interest
+```{r}
+filtered.symptoms <- combined2  %>% filter(field.tree.canopy.symptoms=="Healthy"|field.tree.canopy.symptoms=="Thinning Canopy"|field.tree.canopy.symptoms=="New Dead Top (red or brown needles still attached)"|field.tree.canopy.symptoms=="Old Dead Top (needles already gone)"|field.tree.canopy.symptoms=="Tree is dead") %>% droplevels()
+levels(filtered.symptoms$field.tree.canopy.symptoms)
+```
+
+### Data Exploration
+
+#### Aspect
+##### Symptoms
+
+```{r}
+names(combined)
+ggplot(filtered.symptoms,aes(field.tree.canopy.symptoms,Aspect,fill=field.tree.canopy.symptoms))+geom_boxplot(show.legend=FALSE)+coord_flip()+theme_bw() +labs(title="Aspect (degrees)",x="Symptoms")
+```
+
+#### Slope
+##### Symptoms
+
+```{r}
+ggplot(filtered.symptoms,aes(field.tree.canopy.symptoms,Slope,fill=field.tree.canopy.symptoms))+geom_boxplot(show.legend=FALSE)+coord_flip()+theme_bw() +labs(title="Slope (degrees)",x="Symptoms")
+```
+
+#### Elevation
+##### Symptoms
+
+```{r}
+ggplot(filtered.symptoms,aes(field.tree.canopy.symptoms,PNWSRTMDEM,fill=field.tree.canopy.symptoms))+geom_boxplot(show.legend=FALSE)+coord_flip()+theme_bw() +labs(title="Elevation (meters)",x="Symptoms")
+```
+
+
+
+### Topo & Climate
+#### Slope
+##### CMD
+```{r}
+ggplot(filtered.symptoms,aes(Slope,CMD,color=field.tree.canopy.symptoms))+geom_point()
+```
+
+```{r}
+ggplot(filtered.symptoms,aes(Slope,CMD,color=field.tree.canopy.symptoms))+geom_smooth()
+```
+
+```{r}
+ggplot(filtered.symptoms,aes(Slope,CMD,color=field.tree.canopy.symptoms))+geom_smooth()+facet_wrap(~field.tree.canopy.symptoms)
+```
+
+#### Elevation
+```{r}
+names(topo)
+ggplot(filtered.symptoms,aes(PNWSRTMDEM,CMD,color=field.tree.canopy.symptoms))+geom_smooth()
+```
+
+
+### Binary Data
+
+```{r}
+
+level_key <- c("Healthy" = "Healthy", "Thinning Canopy" = "Unhealthy", "New Dead Top (red or brown needles still attached)" = "Unhealthy", "Old Dead Top (needles already gone)" = "Unhealthy", "Tree is dead" = "Unhealthy")
+
+binary <- filtered.symptoms
+binary$field.tree.canopy.symptoms <- recode_factor(binary$field.tree.canopy.symptoms, !!!level_key)
+levels(binary$field.tree.canopy.symptoms)
+```
+
+#### Topo
+
+
+```{r}
+ggplot(binary,aes(PNWSRTMDEM,CMD,color=field.tree.canopy.symptoms))+geom_smooth()
+```
+
+```{r}
+ggplot(binary,aes(field.tree.canopy.symptoms,Slope,fill=field.tree.canopy.symptoms))+geom_boxplot(show.legend=FALSE)+coord_flip()+theme_bw() +labs(title="Slope (degrees)",x="Symptoms")
+```
+
+
+#### Climate
+### Data Exploration
+
+#### MAT
+
+##### Symptoms
+
+```{r}
+ggplot(binary,aes(field.tree.canopy.symptoms,MAT,fill=field.tree.canopy.symptoms))+geom_boxplot(show.legend=FALSE)+coord_flip()+theme_bw() +labs(title="Decade 2011-2020",x="Symptoms")
+```
+
+##### Site Severity
+
+```{r include=FALSE}
+ggplot(binary,aes(field.number.of.additional.unhealthy.trees..of.same.species..in.area..within.sight.,MAT,fill=field.tree.canopy.symptoms))+geom_boxplot()+coord_flip()+theme_bw() +labs(fill="Unhealthy Trees")+labs(title="Decade 2011-2020",x="Symptoms")
+```
+
+##### Size Class
+
+```{r include=FALSE}
+ggplot(binary,aes(field.optional...tree.size,MAT,fill=field.tree.canopy.symptoms))+geom_boxplot(show.legend=FALSE)+coord_flip()+theme_bw() +labs(fill="Unhealthy Trees")+labs(title="Decade 2011-2020",x="Symptoms")
+```
+
+```{r include=FALSE}
+ggplot(binary,aes(field.tree.canopy.symptoms,MAT,fill=field.tree.canopy.symptoms))+geom_boxplot(show.legend=FALSE)+coord_flip()+facet_wrap(~field.number.of.additional.unhealthy.trees..of.same.species..in.area..within.sight.)+theme_bw() +labs(title="Decade 2011-2020",x="Symptoms")
+```
+
+```{r include=FALSE}
+ggplot(binary,aes(field.tree.canopy.symptoms,MAT,fill=field.tree.canopy.symptoms))+geom_boxplot(show.legend=FALSE)+coord_flip()+theme_bw() +facet_wrap(~field.optional...tree.size) +labs(title="Decade 2011-2020",x="Symptoms")
+```
+
+#### MAP
+
+```{r}
+ggplot(binary,aes(field.tree.canopy.symptoms,MAP,fill=field.tree.canopy.symptoms))+geom_boxplot(show.legend=FALSE)+coord_flip()+theme_bw() +labs(title="Decade 2011-2020",x="Symptoms")
+```
+
+#### AHM
+
+```{r}
+ggplot(binary,aes(field.tree.canopy.symptoms,AHM,fill=field.tree.canopy.symptoms))+geom_boxplot(show.legend=FALSE)+coord_flip()+theme_bw() +labs(title="Decade 2011-2020",x="Symptoms")
+```
+
+#### SHM
+
+```{r}
+ggplot(binary,aes(field.tree.canopy.symptoms,SHM,fill=field.tree.canopy.symptoms))+geom_boxplot(show.legend=FALSE)+coord_flip()+theme_bw() +labs(title="Decade 2011-2020",x="Symptoms")
+```
+
+###### Filtered SHM <200
+```{r}
+binary.shm <- binary %>% filter(SHM<200) %>% droplevels()
+```
+
+```{r}
+ggplot(binary.shm,aes(field.tree.canopy.symptoms,SHM,fill=field.tree.canopy.symptoms))+geom_boxplot(show.legend=FALSE)+coord_flip()+theme_bw() +labs(title="Decade 2011-2020",x="Symptoms")
+```
+
+#### MSP
+
+```{r}
+ggplot(binary,aes(field.tree.canopy.symptoms,MSP,fill=field.tree.canopy.symptoms))+geom_boxplot(show.legend=FALSE)+coord_flip()+theme_bw() +labs(title="Decade 2011-2020",x="Symptoms")
+```
+
+###### Filtered SHM <200
+```{r}
+ggplot(binary.shm,aes(field.tree.canopy.symptoms,MSP,fill=field.tree.canopy.symptoms))+geom_boxplot(show.legend=FALSE)+coord_flip()+theme_bw() +labs(title="Decade 2011-2020",x="Symptoms")
+```
+
+#### CMD
+
+```{r}
+ggplot(binary,aes(field.tree.canopy.symptoms,CMD,fill=field.tree.canopy.symptoms))+geom_boxplot(show.legend=FALSE)+coord_flip()+theme_bw() +labs(title="Decade 2011-2020",x="Symptoms")
+```
+
+###### Filtered SHM <200
+```{r}
+ggplot(binary.shm,aes(field.tree.canopy.symptoms,CMD,fill=field.tree.canopy.symptoms))+geom_boxplot(show.legend=FALSE)+coord_flip()+theme_bw() +labs(title="Decade 2011-2020",x="Symptoms")
+```
+
+#### Eref
+
+
+```{r}
+ggplot(binary,aes(field.tree.canopy.symptoms,Eref,fill=field.tree.canopy.symptoms))+geom_boxplot(show.legend=FALSE)+coord_flip()+theme_bw() +labs(title="Decade 2011-2020",x="Symptoms")
+```
+###### Filtered SHM <200
+
+```{r}
+ggplot(binary.shm,aes(field.tree.canopy.symptoms,Eref,fill=field.tree.canopy.symptoms))+geom_boxplot(show.legend=FALSE)+coord_flip()+theme_bw() +labs(title="Decade 2011-2020",x="Symptoms")
+```
+
+### Large Trees on Severe sites
+
+```{r}
+largesevere <- binary %>% filter(field.optional...tree.size=="Large (too big to wrap arms around trunk)" & field.number.of.additional.unhealthy.trees..of.same.species..in.area..within.sight.=="More than 10" | field.number.of.additional.unhealthy.trees..of.same.species..in.area..within.sight.=="7-10") %>% droplevels()
+```
+
+#### MSP
+
+
+```{r}
+ggplot(largesevere,aes(field.tree.canopy.symptoms,MSP,fill=field.tree.canopy.symptoms))+geom_boxplot(show.legend=FALSE)+coord_flip()+theme_bw() +labs(title="Decade 2011-2020",x="Symptoms")
+```
+
+#### CMD
+
+```{r}
+ggplot(largesevere,aes(field.tree.canopy.symptoms,CMD,fill=field.tree.canopy.symptoms))+geom_boxplot(show.legend=FALSE)+coord_flip()+theme_bw() +labs(title="Decade 2011-2020",x="Symptoms")
 ```
